# headmaster

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  Taskfile.yml  release-please-config.json  renovate.json
.github/rulesets/: main.json
.github/workflows/: post-release.yml  release-please.yml  release.yml  verify.yml
chart/: Chart.yaml  README.md  values.schema.json  values.yaml
chart/crds/: headscaleinstances.yaml
chart/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  headscale-instances.yaml  role.yaml  rolebinding.yaml  serviceaccount.yaml  webhook.yaml
examples/: Chart.yaml  README.md  values-headmaster.yaml  values-pocket-id.yaml  values.schema.json  values.yaml
examples/manifests/: app.yaml  headscale.yaml  pocket-id.yaml
examples/templates/: app.yaml  headmaster.yaml  pocket-id.yaml
headscale-client/: Cargo.toml  README.md  build.rs
headscale-client/proto/google/api/: annotations.proto  http.proto
headscale-client/src/: fake.rs  lib.rs  policy.rs
headscale-client/tests/: live.rs
integration-tests/: Cargo.toml  README.md
integration-tests/src/: lib.rs
integration-tests/tests/: e2e.rs  functional.rs
integration-tests/tests/e2e/: examples.rs  pocket_id.rs
integration-tests/tests/functional/: crds.rs  headscale_instance.rs  ingress.rs  support.rs
k8s-ext/: Cargo.toml  README.md
k8s-ext/src/: configmap.rs  configmap_volume_source.rs  container.rs  container_port.rs  env.rs  job.rs  label.rs  lib.rs  pod_spec.rs  pod_template_spec.rs  policy_rule.rs  probe.rs  role.rs  role_binding.rs  secret.rs  secret_env_source.rs  secret_get.rs  service.rs  service_account.rs  service_port.rs  statefulset.rs  statefulset_get.rs  subject.rs  volume.rs  volume_mount.rs
operator/: Cargo.toml  README.md
operator/src/: context.rs  lib.rs  main.rs  test_support.rs
operator/src/controllers/: applier.rs  mod.rs  recorder.rs
operator/src/controllers/headscale_instance/: bootstrap.rs  builders.rs  error.rs  mod.rs  policy.rs  reconcile.rs  scim.rs  test_support.rs
operator/src/controllers/ingress/: annotations.rs  auth_key.rs  error.rs  mod.rs  names.rs  proxy.rs  reconcile.rs  test_support.rs
operator/src/server/: health.rs  webhook.rs
operator/src/types/: condition.rs  headscale_instance.rs  ingress_annotations.rs  mod.rs
scim/: Cargo.toml  README.md
scim/src/: auth.rs  main.rs  policy.rs  services.rs  storage.rs  types.rs
scim/src/routes/: discovery.rs  groups.rs  internal.rs  mod.rs  users.rs
src/: lib.rs
