[package]
name = "headscale-client"
description = "gRPC client for the headscale control-plane API"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[features]
fake-server = ["dep:tokio-stream", "dep:hyper-util", "dep:tower"]

[dependencies]
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
async-trait = "0.1"
jsonc-parser = { version = "0.32", features = ["cst"] }
serde_json = "1"
tokio-stream = { version = "0.1", optional = true }
hyper-util = { version = "0.1", features = ["tokio"], optional = true }
tower = { version = "0.5", optional = true }

[dev-dependencies]
jsonc-parser = { version = "0.32", features = ["cst", "serde"] }

[build-dependencies]
tonic-prost-build = "0.14"
protox = "0.9"
