[package]
name = "k8s-ext"
description = "Fluent builder and accessor traits for Kubernetes objects"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
k8s-openapi = { version = "0.27", features = ["v1_35"] }
