[package]
name = "operator"
description = "Kubernetes operator for headscale control-plane instances"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
default-run = "operator"

[dependencies]
kube = { version = "3.1", default-features = false, features = ["runtime", "derive", "ws", "admission", "rustls-tls", "aws-lc-rs"] }
k8s-openapi = { version = "0.27", features = ["v1_35", "schemars"] }
k8s-ext = { path = "../k8s-ext" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "net", "sync"] }
tokio-util = "0.7"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
schemars = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
sha2 = "0.11"
hex = "0.4"
rand = "0.10"
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls"] }
http = "1"
humantime = "2"
shadow-rs = "2"
prost-types = "0.14"
headscale-client = { path = "../headscale-client" }
jsonc-parser = { version = "0.32", features = ["cst", "serde"] }

[build-dependencies]
shadow-rs = "2"

[dev-dependencies]
headscale-client = { path = "../headscale-client", features = ["fake-server"] }
async-trait = "0.1"
indoc = "2"
bytes = "1"
tower = "0.5"
