[package]
name = "operator"
description = "Kubernetes operator for headscale control-plane instances"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
default-run = "operator"

[dependencies]
# Kubernetes client and API types
kube = { version = "4", default-features = false, features = ["runtime", "derive", "ws", "admission", "rustls-tls", "aws-lc-rs"] }
k8s-openapi = { version = "0.28", features = ["v1_32", "schemars"] }
k8s-ext = { path = "../k8s-ext" }
schemars = "1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "net", "sync"] }
tokio-util = "0.7"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde-saphyr = "0.0"
jsonc-parser = { version = "0.32", features = ["cst", "serde"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
thiserror = "2"

# HTTP server (admission webhook) and HTTP client (SCIM notify)
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls"] }
http = "1"
reqwest = { version = "0.13", default-features = false }

# Utilities
clap = { version = "4", features = ["derive"] }
sha2 = "0.11"
hex = "0.4"
rand = "0.10"
shadow-rs = "2"
prost-types = "0.14"

# Internal crates
headscale-client = { path = "../headscale-client" }

[build-dependencies]
shadow-rs = "2"

[dev-dependencies]
headscale-client = { path = "../headscale-client", features = ["fake-server"] }
async-trait = "0.1"
indoc = "2"
bytes = "1"
tower = "0.5"
